# evolution

./: Cargo.toml  README.md
src/: cli.rs  direction.rs  evolver.rs  genome.rs  lib.rs  lifeform.rs  main.rs  neural_net.rs  runner.rs  ui.rs  util.rs  world.rs
