[package]
name = "evolution_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
crossterm = "0.25.0"
rand = "0.8.5"
rayon = "1.6.1"
strum = "0.24.1"
strum_macros = "0.24.3"
tui = "0.19.0"
